feat: overhaul advanced search with acronym autocomplete and performance optimizations